--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a solution for the Frontend Mentor's QR code component challenge">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="main-div">
-      <div class="card-div">
+    <main class="card">
+      <picture class="card__img">
         <img src="./images/image-qr-code.png" alt="Frontend Mentor's QR Code">
-        <h1 class="info-header">
+      </picture>
+      <section class="card__info">
+        <h1 class="info__title">
           Improve your front-end skills by building projects
         </h1>
-        <p class="info-comment">
+        <p class="info__comment">
           Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
         </p>
-      </div>
-    </div>
-    <div class="attribution">
+      </section>
+    </main>
+    <footer>
       <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor </a></p>
       <p>Coded by <a href="https://github.com/joaofeitoza13">João Feitoza</a></p>
-    </div>
+    </footer>
   </body>
 </html>
