--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
       </section>
     </main>
-    <footer>
+    <footer class="hidden">
       <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor </a></p>
       <p>Coded by <a href="https://github.com/joaofeitoza13">João Feitoza</a></p>
     </footer>
